[gd_scene load_steps=19 format=3 uid="uid://glii0poslcve"]

[ext_resource type="Theme" uid="uid://dvcjel72een6o" path="res://OQ_Toolkit/OQ_UI2D/theme/oq_ui2d_standard.theme" id="1"]
[ext_resource type="FontFile" uid="uid://cdsnr8tscm8y6" path="res://OQ_Toolkit/OQ_UI2D/theme/Roboto-Medium.ttf" id="2"]
[ext_resource type="Script" path="res://game/BeepSaberMainMenu.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://cviyxvrpvyr0g" path="res://game/data/beepsaber_logo.png" id="3_wpmn0"]
[ext_resource type="FontFile" uid="uid://01k27lk2a4bw" path="res://OQ_Toolkit/OQ_UI2D/theme/RobotoMono-Medium.ttf" id="5"]
[ext_resource type="PackedScene" uid="uid://dtipmx5ep1dkk" path="res://game/vr_slider.tscn" id="6"]
[ext_resource type="FontVariation" uid="uid://ckoe517v8p3qp" path="res://OQ_Toolkit/OQ_UI2D/theme/oq_ui2d_standard_font.tres" id="7"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.14902, 0.14902, 0.14902, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.270588, 0.270588, 0.270588, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(0.270588, 0.270588, 0.270588, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("5"), ExtResource("5")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="7"]
default_font = SubResource("6")

[sub_resource type="Theme" id="9"]
default_font = ExtResource("7")

[sub_resource type="FontFile" id="10"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="11"]
fallbacks = Array[Font]([ExtResource("5"), ExtResource("5")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="12"]
default_font = SubResource("11")

[node name="BeepSaberMainMenu" type="Panel"]
offset_right = 1408.0
offset_bottom = 640.0
theme = ExtResource("1")
theme_override_styles/panel = SubResource("1")
script = ExtResource("3")

[node name="Play_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 576.0
offset_right = 848.0
offset_bottom = 624.0
theme_override_styles/hover = SubResource("2")
theme_override_styles/pressed = SubResource("3")
theme_override_styles/normal = SubResource("4")
text = "Play"

[node name="Delete_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 864.0
offset_top = 511.0
offset_right = 1040.0
offset_bottom = 559.0
theme_override_styles/disabled = SubResource("5")
theme_override_styles/hover = SubResource("2")
theme_override_styles/pressed = SubResource("3")
theme_override_styles/normal = SubResource("4")
disabled = true
text = "Delete"

[node name="Exit_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1265.0
offset_top = 576.0
offset_right = 1390.0
offset_bottom = 624.0
theme_override_styles/hover = SubResource("2")
theme_override_styles/pressed = SubResource("3")
theme_override_styles/normal = SubResource("4")
text = "Exit"

[node name="Settings_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1265.0
offset_top = 520.0
offset_right = 1390.0
offset_bottom = 568.0
theme_override_styles/hover = SubResource("2")
theme_override_styles/pressed = SubResource("3")
theme_override_styles/normal = SubResource("4")
text = "Settings"

[node name="Search_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 13.0
offset_right = 131.0
offset_bottom = 56.0
pivot_offset = Vector2(-937.032, -176)
theme_override_styles/hover = SubResource("2")
theme_override_styles/pressed = SubResource("3")
theme_override_styles/normal = SubResource("4")
text = "Search"

[node name="Label" type="Label" parent="Search_Button"]
layout_mode = 0
offset_left = 117.0
offset_top = 3.0
offset_right = 167.0
offset_bottom = 36.0

[node name="cover" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1050.0
offset_top = 67.0
offset_right = 1390.0
offset_bottom = 320.0
texture = ExtResource("3_wpmn0")
expand_mode = 1
stretch_mode = 5

[node name="SongInfo_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 864.0
offset_top = 320.0
offset_right = 1328.0
offset_bottom = 468.0
text = "Song Author: TheFatRat
Song Title: Time Lapse
Beatmap Author: Timeweaver
Play Count: 10"

[node name="SongsMenu" type="ItemList" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 64.0
offset_right = 848.0
offset_bottom = 560.0
theme = SubResource("7")
theme_override_colors/font_color = Color(1, 1, 1, 1)
fixed_icon_size = Vector2i(60, 60)

[node name="PlaylistSelector" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 139.0
offset_top = 12.0
offset_right = 845.0
offset_bottom = 60.0
theme = SubResource("9")
theme_override_fonts/font = SubResource("10")
flat = true

[node name="DifficultyMenu" type="ItemList" parent="."]
layout_mode = 0
offset_left = 864.0
offset_top = 64.0
offset_right = 1040.0
offset_bottom = 320.0
theme = SubResource("12")
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="Songs_Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 864.0
offset_top = 16.0
offset_right = 1040.0
offset_bottom = 64.0
text = "Difficulty"

[node name="LoadPlaylists_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 576.0
offset_right = 432.0
offset_bottom = 624.0
theme_override_styles/hover = SubResource("2")
theme_override_styles/pressed = SubResource("3")
theme_override_styles/normal = SubResource("4")
text = "Refresh Songs/Playlists"

[node name="song_prev" type="AudioStreamPlayer" parent="."]
volume_db = -60.0

[node name="stop_prev" type="Timer" parent="song_prev"]
one_shot = true

[node name="song_vr_slider" parent="." instance=ExtResource("6")]
scroll_node_path = NodePath("../SongsMenu")

[node name="diff_vr_slider" parent="." instance=ExtResource("6")]
scroll_node_path = NodePath("../DifficultyMenu")

[connection signal="pressed" from="Play_Button" to="." method="_on_Play_Button_pressed"]
[connection signal="button_up" from="Delete_Button" to="." method="_on_Delete_Button_button_up"]
[connection signal="pressed" from="Exit_Button" to="." method="_on_Exit_Button_pressed"]
[connection signal="pressed" from="Settings_Button" to="." method="_on_Settings_Button_pressed"]
[connection signal="button_up" from="Search_Button" to="." method="_on_Search_Button_button_up"]
[connection signal="item_selected" from="SongsMenu" to="." method="_select_song"]
[connection signal="item_selected" from="PlaylistSelector" to="." method="_on_PlaylistSelector_item_selected"]
[connection signal="item_selected" from="DifficultyMenu" to="." method="_select_difficulty"]
[connection signal="pressed" from="LoadPlaylists_Button" to="." method="_on_LoadPlaylists_Button_pressed"]
[connection signal="timeout" from="song_prev/stop_prev" to="." method="_on_stop_prev_timeout"]
